# CHSGA

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
ext/: README.md
src/: ConSGA.cpp  ConSGA_traceback.cpp  ParSGA.cpp  ParSGA_traceback.cpp  align.hpp  config.hpp  csr_to_adj.cpp  csr_to_char_graphs.cpp  csr_traceback.hpp  handlegraph_to_csr.cpp  load_reads.hpp  protobuf_to_csr.cpp  serialParSGA.cpp  traceback.hpp
src/CHoverrides/: build_pch.cpp
src/PaSGALoverrides/: align.hpp
src/ParSGAoverrides/: csr_align.hpp  graph_util.hpp  preprocessing.hpp  read_csr.hpp
